--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
                 </div>
                 
                 <div class="calculator-content">
-                    <div class="icon-circle">
+                   <a href="calc.html"> <div class="icon-circle">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <rect x="4" y="2" width="16" height="20" rx="2"/>
                             <line x1="8" y1="6" x2="16" y2="6"/>
                             <line x1="16" y1="10" x2="8" y2="10"/>
                             <line x1="8" y1="14" x2="16" y2="14"/>
                             <line x1="8" y1="18" x2="12" y2="18"/>
-                        </svg>
+                        </svg></a>
                     </div>
                     <h2 class="section-title">Solar Calculator</h2>
                     <p class="section-description">
@@ -261,11 +261,11 @@
                                 <div class="resource-image-container">
                                     <img src="assets/wind-energy.jpg" alt="Wind Energy" class="resource-image" />
                                     <div class="resource-gradient"></div>
-                                    <div class="resource-icon-badge">
+                                    <a href="wind-energy.html"><div class="resource-icon-badge">
                                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                             <path d="M9.59 4.59A2 2 0 1 1 11 8H2m10.59 11.41A2 2 0 1 0 14 16H2m15.73-8.27A2.5 2.5 0 1 1 19.5 12H2"/>
                                         </svg>
-                                    </div>
+                                    </div></a>
                                 </div>
                                 <div class="resource-content">
                                     <h3 class="resource-title">Wind Energy</h3>
@@ -283,12 +283,12 @@
                                 <div class="resource-image-container">
                                     <img src="assets/solar-energy.jpg" alt="Solar Energy" class="resource-image" />
                                     <div class="resource-gradient"></div>
-                                    <div class="resource-icon-badge">
+                                    <a href="solar-energy.html"><div class="resource-icon-badge">
                                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                             <circle cx="12" cy="12" r="4"/>
                                             <path d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M4.93 19.07l1.41-1.41m11.32-11.32l1.41-1.41"/>
                                         </svg>
-                                    </div>
+                                    </div></a>
                                 </div>
                                 <div class="resource-content">
                                     <h3 class="resource-title">Solar Energy</h3>
@@ -306,11 +306,11 @@
                                 <div class="resource-image-container">
                                     <img src="assets/green-hydrogen.jpg" alt="Green Hydrogen" class="resource-image" />
                                     <div class="resource-gradient"></div>
-                                    <div class="resource-icon-badge">
+                                   <a href="green.html"> <div class="resource-icon-badge">
                                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                             <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
                                         </svg>
-                                    </div>
+                                    </div></a>
                                 </div>
                                 <div class="resource-content">
                                     <h3 class="resource-title">Green Hydrogen</h3>
@@ -328,11 +328,11 @@
                                 <div class="resource-image-container">
                                     <img src="assets/hydropower.jpg" alt="Hydropower" class="resource-image" />
                                     <div class="resource-gradient"></div>
-                                    <div class="resource-icon-badge">
+                                    <a href="hydropower.html"><div class="resource-icon-badge">
                                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                             <path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.31 0z"/>
                                         </svg>
-                                    </div>
+                                    </div></a>
                                 </div>
                                 <div class="resource-content">
                                     <h3 class="resource-title">Hydropower</h3>
@@ -469,3 +469,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
